--- a/index.html
+++ b/index.html
@@ -100,31 +100,34 @@
       </section>
       <section class="profile js--section--about">
         <h1 class="profile__name">Htut Wai Phyoe</h1>
-        <h5>Web Developer</h5>
+        <h5>Professional Web Developer</h5>
         <ul class="profile__list">
           <li class="profile__item">
-            <a href="" class="profile__link">
+            <a href="https://www.facebook.com/real.hwp/" class="profile__link">
               <svg class="profile__icon">
                 <use href="img/nav/symbol-defs.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="profile__item">
-            <a href="" class="profile__link">
+            <a
+              href="https://www.instagram.com/htutwaiphyoe/"
+              class="profile__link"
+            >
               <svg class="profile__icon">
                 <use href="img/nav/symbol-defs.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="profile__item">
-            <a href="" class="profile__link">
+            <a href="https://twitter.com/Htut_Wai_Phyoe" class="profile__link">
               <svg class="profile__icon">
                 <use href="img/nav/symbol-defs.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="profile__item">
-            <a href="" class="profile__link">
+            <a href="https://github.com/htutwaiphyoe" class="profile__link">
               <svg class="profile__icon">
                 <use href="img/nav/symbol-defs.svg#icon-github"></use>
               </svg>
@@ -149,7 +152,7 @@
         <div class="about__text">
           <h2 class="secondary-heading about__text-heading">About Me</h2>
           <p>
-            <i>Hello, welcome to my personal page.</i> <br />
+            Hello, welcome to my personal page. <br />
             I am a human namely called
             <strong> Htut Wai Phyoe </strong> (Burmese name). I've been living
             in the world over 20 years ago.<br />
@@ -415,7 +418,7 @@
                 </svg>
               </div>
 
-              <span>Mandalay &mdash; Myanmar</span>
+              <span>Mandalay, Myanmar</span>
             </div>
             <div class="contact__info-item">
               <div class="contact__info-item-icon">
@@ -433,7 +436,7 @@
                 </svg>
               </div>
 
-              <span>0979865290</span>
+              <span>+95979865290</span>
             </div>
           </div>
         </div>
@@ -441,7 +444,7 @@
     </main>
     <footer class="footer">
       <div class="footer__text">
-        Copyright&copy; by Htut Wai Phyoe (Jimmy-Sama) 2020.<br />
+        Copyright&copy; by Htut Wai Phyoe 2020.<br />
         TEAMS & CONDITIONS | PRIVACY | LEGAL NOTICE
       </div>
     </footer>
