--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Here is my pofolio with some special attributes and skills"
     />
     <meta name="author" content="Htut Wai Phyoe" />
-    <title>Htut Wai Phyoe | Developer</title>
+    <title>Htut Wai Phyoe</title>
     <link rel="shortcut icon" href="/img/photo/logo.png" />
     <link
       rel="stylesheet"
@@ -100,7 +100,7 @@
       </section>
       <section class="profile js--section--about">
         <h1 class="profile__name">Htut Wai Phyoe</h1>
-        <h5>Professional Web Developer</h5>
+        <h5>Web Developer</h5>
         <ul class="profile__list">
           <li class="profile__item">
             <a href="https://www.facebook.com/real.hwp/" class="profile__link">
