--- a/index.html
+++ b/index.html
@@ -152,14 +152,13 @@
         <div class="about__text">
           <h2 class="secondary-heading about__text-heading">About Me</h2>
           <p>
-            Hello, welcome to my personal page. <br />
-            I am a human namely called
+            Hello, welcome to my personal page. I am a human namely called
             <strong> Htut Wai Phyoe </strong> (Burmese name). I've been living
-            in the world over 20 years ago.<br />
-            Currently, I am a fourth year student studying at Mandalay
-            Technological University (MTU) specialized in Computer Engineering &
-            Information Techonogy (CEIT). I extremely have a passion on coding
-            and apparently I'm pursuing WEB Development.
+            in the world over 20 years ago. Currently, I am a fourth year
+            student studying at Mandalay Technological University (MTU)
+            specialized in Computer Engineering & Information Techonogy (CEIT).
+            I extremely have a passion on coding and apparently I'm pursuing WEB
+            Development.
           </p>
 
           <a href="#" class="btn btn-lg about__text-link">
@@ -224,11 +223,11 @@
       <section class="statistics">
         <div class="statistics__box">
           <div class="statistics__item">
-            <h4 class="heading-4">10<span>+</span></h4>
+            <h4 class="heading-4">15<span>+</span></h4>
             <p class="statistics__text">Projects done</p>
           </div>
           <div class="statistics__item">
-            <h4 class="heading-4">7<span>+</span></h4>
+            <h4 class="heading-4">3<span>+</span></h4>
             <p class="statistics__text">Partners</p>
           </div>
           <div class="statistics__item">
