--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </nav>
     <header class="header js--header">
       <section class="profile js--section--about">
-        <h1 class="profile__name">FOLLOW ME!</h1>
+        <!-- <h1 class="profile__name">FOLLOW ME!</h1> -->
         <ul class="profile__list">
           <li class="profile__item">
             <a href="https://www.facebook.com/real.hwp/" class="profile__link">
