--- a/index.html
+++ b/index.html
@@ -93,9 +93,14 @@
         </ul>
       </div>
     </nav>
-    <header class="header js--header">
+    <header class="header js--header"></header>
+    <main>
+      <section class="photo">
+        <img src="img/photo/profile2.jpg" alt="Jimmy" class="photo__pro" />
+      </section>
       <section class="profile js--section--about">
-        <!-- <h1 class="profile__name">FOLLOW ME!</h1> -->
+        <h1 class="profile__name">Htut Wai Phyoe</h1>
+        <h5>Web Developer</h5>
         <ul class="profile__list">
           <li class="profile__item">
             <a href="https://www.facebook.com/real.hwp/" class="profile__link">
@@ -137,12 +142,6 @@
           </li>
         </ul>
       </section>
-    </header>
-    <main>
-      <!-- <section class="photo">
-        <img src="img/photo/profile2.jpg" alt="Jimmy" class="photo__pro" />
-      </section> -->
-
       <section class="about">
         <div class="about__img">
           <img
