--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="percentage"><span>78%</span></div>
               </div>
 
-              <h6 class="u-padding-sm">HTML5 & CSS3</h6>
+              <h6 class="u-padding-sm">HTML5, CSS3, SASS</h6>
             </div>
             <div class="skill__box-item">
               <div class="skill__box-item__circle">
@@ -189,10 +189,10 @@
                   <circle cx="95" cy="95" r="90" />
                   <circle cx="95" cy="95" r="90" />
                 </svg>
-                <div class="percentage"><span>59%</span></div>
+                <div class="percentage"><span>70%</span></div>
               </div>
 
-              <h6 class="u-padding-sm">JAVASCRIPT &mdash; Node.js</h6>
+              <h6 class="u-padding-sm">JavaScript</h6>
             </div>
           </div>
           <div class="skill__box--2">
@@ -202,10 +202,10 @@
                   <circle cx="95" cy="95" r="90" />
                   <circle cx="95" cy="95" r="90" />
                 </svg>
-                <div class="percentage"><span>81%</span></div>
+                <div class="percentage"><span>50%</span></div>
               </div>
 
-              <h6 class="u-padding-sm">PHP &mdash; Laravel</h6>
+              <h6 class="u-padding-sm">Node.js</h6>
             </div>
             <div class="skill__box-item">
               <div class="skill__box-item__circle">
@@ -216,7 +216,7 @@
                 <div class="percentage"><span>65%</span></div>
               </div>
 
-              <h6 class="u-padding-sm">JAVA &mdash; Spring</h6>
+              <h6 class="u-padding-sm">React.js</h6>
             </div>
           </div>
         </div>
