--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     </nav>
     <header class="header js--header"></header>
     <main>
-      <section class="photo">
+      <!-- <section class="photo">
         <img src="img/photo/profile2.jpg" alt="Jimmy" class="photo__pro" />
-      </section>
-      <section class="profile js--section--about">
+      </section> -->
+      <!-- <section class="profile js--section--about">
         <h1 class="profile__name">Htut Wai Phyoe</h1>
         <h5>Web Developer</h5>
         <ul class="profile__list">
@@ -141,7 +141,7 @@
             </a>
           </li>
         </ul>
-      </section>
+      </section> -->
       <section class="about">
         <div class="about__img">
           <img
