--- a/src/index.html
+++ b/src/index.html
@@ -503,8 +503,8 @@
             <a href="https://hwpswe.vercel.app/" class="footer__link"
               >Htut Wai Phyo</a
             >
-            Copyright &copy; by Htut Wai Phyo. A credit to orignial author Jonas
-            for contents and highly appreciated.
+            Copyright &copy; @ 2024. A credit to orignial author Jonas for
+            contents and highly appreciated.
           </p>
         </div>
       </div>
