--- a/src/index.html
+++ b/src/index.html
@@ -501,10 +501,9 @@
           <p class="footer__text">
             Built by
             <a href="https://hwpswe.vercel.app/" class="footer__link"
-              >Htut Wai Phyo</a
+              >Htut Wai Phyo.</a
             >
-            Copyright &copy; @ 2024. A credit to orignial author Jonas for
-            contents and highly appreciated.
+            Copyright &copy; 2020. Credit to orignial author Jonas.
           </p>
         </div>
       </div>
