--- a/src/index.html
+++ b/src/index.html
@@ -503,7 +503,8 @@
             <a href="https://hwpswe.vercel.app/" class="footer__link"
               >Htut Wai Phyo.</a
             >
-            Copyright &copy; 2020. Credit to orignial author Jonas.
+            Copyright &copy; 2024. Credit to orignial course tutor Jonas for
+            content and highly appreciated.
           </p>
         </div>
       </div>
